--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,11 @@
         "src": "./app.js",
         "use": "@vercel/node"
       }
-
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/"
+      }
     ]
   }
